リリースに表示順を追加
