# src/server/packages/Release/Application/Admin/UseCase/Create/CreateInputData.php
@@ -19,6 +19,7 @@ readonly class CreateInputData
         public string $description,
         public ?string $jacketArtUrl,
         public bool $isDisplay,
+        public int $orderNo,
         public array $media,
     ) {
     }
