# src/server/packages/Release/Application/Admin/UseCase/Create/CreateUseCase.php
@@ -57,6 +57,7 @@ readonly class CreateUseCase
                 $inputData->description,
                 $inputData->jacketArtUrl,
                 $inputData->isDisplay,
+                $inputData->orderNo,
                 $inputData->media,
             );
 
